--- a/Novos Algoritmos/Arvore Vermelho-Preta/src/_windows.cbp
+++ b/Novos Algoritmos/Arvore Vermelho-Preta/src/_windows.cbp
@@ -42,6 +42,7 @@
 		<Unit filename="../include/ArvoreVermelhoPreta.h" />
 		<Unit filename="../include/Lista.h" />
 		<Unit filename="../include/No.h" />
+		<Unit filename="../include/No_VP.h" />
 		<Unit filename="../include/imprimeEstrutura.h" />
 		<Unit filename="ArvoreVemelhoPreta.cpp" />
 		<Unit filename="Lista.cpp" />
